tests/transpiler/x/scala/sum_builtin.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/sum_builtin.scala:4: error: not found: value sum
    println(sum(List(1, 2, 3)))
            ^
one error found
