tests/transpiler/x/scala/sum_builtin.scala
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 17:49:08 GMT+7
object Main {
    def main(args: Array[String]): Unit = {
        println(sum(List(1, 2, 3)))
    }
}
